// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properties falsey userId snapshot 1`] = `
<DocumentFragment>
  <div
    class="properties"
  >
    <div
      class="side-bar"
    >
      <h2
        class="side-bar__heading"
      >
        Filter By City
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"city\\":\\"Leeds\\"}"
          >
            Leeds
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"city\\":\\"Manchester\\"}"
          >
            Manchester
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Filter By Type
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"type\\":\\"Flat\\"}"
          >
            Flat
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"type\\":\\"Detached\\"}"
          >
            Detached
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Sort By Price
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?sort={\\"price\\":-1}"
          >
            Ascending
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?sort={\\"price\\":1}"
          >
            Descending
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Search by Title
      </h2>
      <div
        class="side-bar__search"
      >
        <input
          class="side-bar__search__input"
          id="query"
        />
        <button
          class="side-bar__search__submit"
          type="submit"
        >
          <img
            alt="search"
            src="search.png"
          />
        </button>
      </div>
      <button
        class="side-bar__reset"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="properties__main"
    >
      <div>
        <div
          class="loader"
        />
      </div>
      <div
        class="properties__main__cards"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Properties truthy userId snapshot 1`] = `
<DocumentFragment>
  <div
    class="properties"
  >
    <div
      class="side-bar"
    >
      <label
        class="side-bar__favourites"
        for="favourites"
      >
        <h2
          class="side-bar__heading"
        >
          Filter By Favourites
        </h2>
        <input
          id="favourites"
          type="checkbox"
        />
      </label>
      <h2
        class="side-bar__heading"
      >
        Filter By City
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"city\\":\\"Leeds\\"}"
          >
            Leeds
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"city\\":\\"Manchester\\"}"
          >
            Manchester
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Filter By Type
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"type\\":\\"Flat\\"}"
          >
            Flat
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?query={\\"type\\":\\"Detached\\"}"
          >
            Detached
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Sort By Price
      </h2>
      <ul>
        <li>
          <a
            class="side-bar__link null"
            href="/?sort={\\"price\\":-1}"
          >
            Ascending
          </a>
        </li>
        <li>
          <a
            class="side-bar__link null"
            href="/?sort={\\"price\\":1}"
          >
            Descending
          </a>
        </li>
      </ul>
      <h2
        class="side-bar__heading"
      >
        Search by Title
      </h2>
      <div
        class="side-bar__search"
      >
        <input
          class="side-bar__search__input"
          id="query"
        />
        <button
          class="side-bar__search__submit"
          type="submit"
        >
          <img
            alt="search"
            src="search.png"
          />
        </button>
      </div>
      <button
        class="side-bar__reset"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="properties__main"
    >
      <div>
        <div
          class="loader"
        />
      </div>
      <div
        class="properties__main__cards"
      />
    </div>
  </div>
</DocumentFragment>
`;
